apps/infrastructure/internal-gateway/http-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: gateway-system
spec:
  parentRefs:
    - name: internal
      namespace: gateway-system
      sectionName: http
  hostnames:
    - "*.internal.zemn.xyz"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
